# 24783_Porject

Alpha/: CMakeLists.txt  Readme.md  Visu.cpp
Alpha/Pathplanner/: CMakeLists.txt  pathplanner.cpp  pathplanner.h
Alpha/STL/: CMakeLists.txt  stlfileloader.cpp  stlfileloader.h
Alpha/STLfiles/: 24783_project_part.STL  Part1.SLDPRT  Part1.STL  Part2.STL  Target Body 1 fine.STL  surface4_solid.STL
Alpha/Slice/: CMakeLists.txt  uniformslicingalg.cpp  uniformslicingalg.h
Alpha/tests/: CMakeLists.txt  test_pathplanner.cpp  test_stlfileloader.cpp  test_uniformslicingalg.cpp  test_visu.cpp
